v0.2.2
+ Ability to get countries and cities lists from Google was added.
! Small corrections to fix some pychecker's warnings.
! get_weather_from_google() now supports non-English languages. Thank you, Shinysky.

v0.2.1 (07 July 2009)
+ GisMeteo service was removed. It doesn't provide XML feeds anymore.
! IndexError issue was fixed. Thank you, Dr. Drang.

v0.2 (29 May 2009)
+ Added support of NOAA XML feeds
+ Added support of GisMeteo XML feeds
+ Re-organized files: no more package, only one Python module
+ Added some example scripts
+ Added CHANGELOG and README files

v0.1 (18 May 2009)
+ Inital release: it is possible to get weather reports from Yahoo and Google